--- a/ProductUI/package.json
+++ b/ProductUI/package.json
@@ -22,7 +22,9 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^18.1.2",
+    "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.0-beta.3",
