Enable Asyn when talking Rabbit Server and insure that service is stable in all apis

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15})- %msg%n}
 
 spring.rabbitmq.host=localhost
@@ -17,3 +16,6 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange.name=product_service_exchange
 rabbitmq.store.queue.name=product_store_queue
 rabbitmq.store.routing.key=product_store_routing_key
+
+rabbitmq.retry.template.maxAttemps=3
+rabbitmq.retry.template.backoff.milliseconds=3000
