--- a/ProductService/pom.xml
+++ b/ProductService/pom.xml
@@ -76,6 +76,11 @@
             <version>24.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
     </dependencies>
 
     <build>
