--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.dynamic=true
 
 rabbitmq.exchange.name=product_service_exchange
 rabbitmq.store.queue.name=product_store_queue
